Reorganizing the code

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <title>Funlink</title>
 </head>
 <body>
-    <div id="container">
+    <div id="app">
         <button id="newRoom" class="big" onclick="newRoom()">New Room</button>
     </div>
     <script src="/socket.io/socket.io.js"></script>
